# stackinfo

./: Cargo.toml  README.md  main.c.ci
src/: callgraph_info.rs  location.rs  main.rs  stack_usage.rs
src/callgraph_info/: ast.rs  callgraph_info.pest
